packages/kyvernoPolicies/chart/tests/vpol/disallow-nodeport-services-cel/chainsaw-test/service-bad.yaml
apiVersion: v1
kind: Service
metadata:
  name: bad-nodeport
spec:
  type: NodePort
  selector:
    app: test
  ports:
  - port: 80
