packages/kyvernoPolicies/chart/tests/vpol/disallow-nodeport-services-cel/chainsaw-test/service-good.yaml
apiVersion: v1
kind: Service
metadata:
  name: good-clusterip
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
  - port: 80
